--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Poppins">
 
-    <title>React App</title>
+    <title>handy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
